@@ -5,8 +5,10 @@ import com.baomidou.mybatisplus.core.metadata.IPage;
 import com.baomidou.mybatisplus.extension.plugins.pagination.Page;
 import io.github.fushuwei.scaskeleton.core.exception.BusinessException;
 import io.github.fushuwei.scaskeleton.core.result.ResultCode;
+import io.github.fushuwei.scaskeleton.security.context.SecurityUtils;
 import io.github.fushuwei.scaskeleton.system.api.request.role.RolePageRequest;
 import io.github.fushuwei.scaskeleton.system.api.request.role.RoleCreateRequest;
+import io.github.fushuwei.scaskeleton.system.api.request.role.RolePermissionAssignRequest;
 import io.github.fushuwei.scaskeleton.system.api.request.role.RoleUpdateRequest;
 import io.github.fushuwei.scaskeleton.system.api.response.role.RoleResponse;
 import io.github.fushuwei.scaskeleton.system.converter.RoleConverter;
@@ -23,10 +25,10 @@ import org.springframework.util.CollectionUtils;
 
 import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Objects;
 
 /**
- * 角色管理服务实现。
+ * 角色管理 Service 实现类
  *
  * @author Fu Wei
  */
@@ -35,94 +37,138 @@ import java.util.stream.Collectors;
 @RequiredArgsConstructor
 public class SysRoleServiceImpl implements SysRoleService {
 
-    /** 角色主表 Mapper */
     private final SysRoleMapper roleMapper;
-    /** 角色-权限关联 Mapper */
+
     private final SysRolePermissionMapper rolePermissionMapper;
-    /** Entity ↔ Response 转换器（MapStruct 生成） */
+
     private final RoleConverter roleConverter;
 
+    /**
+     * 查询角色列表
+     *
+     * @return 角色列表
+     */
     @Override
-    public IPage<RoleResponse> pageRoles(String tenantId, RolePageRequest req) {
-        // 构造分页对象
-        Page<SysRole> page = new Page<>(req.getPageNum(), req.getPageSize());
-        // 查询实体分页并转换为响应对象分页
-        IPage<SysRole> entityPage = roleMapper.selectRolePage(page, tenantId, req);
-        return entityPage.convert(roleConverter::toRoleResponse);
-    }
-
-    @Override
-    public List<RoleResponse> listRoles(String tenantId) {
+    public List<RoleResponse> listRoles() {
         // 按租户查询全部角色，按 sort 升序
         List<SysRole> roles = roleMapper.selectList(new LambdaQueryWrapper<SysRole>()
-                .eq(SysRole::getTenantId, tenantId)
-                .orderByAsc(SysRole::getSort));
+            .eq(SysRole::getTenantId, SecurityUtils.getTenantId())
+            .orderByAsc(SysRole::getSort));
         // 转换为响应对象列表
         return roles.stream().map(roleConverter::toRoleResponse).toList();
     }
 
+    /**
+     * 分页查询角色列表
+     *
+     * @param request 查询条件
+     * @return 分页结果
+     */
+    @Override
+    public IPage<RoleResponse> pageRoles(RolePageRequest request) {
+        // 构造分页对象
+        Page<SysRole> page = new Page<>(request.getPageNum(), request.getPageSize());
+        // 查询实体分页并转换为响应对象分页
+        IPage<SysRole> entityPage = roleMapper.selectRolePage(page, SecurityUtils.getTenantId(), request);
+        return entityPage.convert(roleConverter::toRoleResponse);
+    }
+
+    /**
+     * 根据 ID 查询角色详情
+     *
+     * @param id 角色 ID
+     * @return 角色详情
+     */
     @Override
     public RoleResponse getRoleById(String id) {
-        // 按主键查询角色并转换为响应对象
+        // 加载角色实体并转换为响应对象
         return roleConverter.toRoleResponse(loadRoleEntity(id));
     }
 
+    /**
+     * 新增角色
+     *
+     * @param request 角色信息
+     */
     @Override
     @Transactional(rollbackFor = Exception.class)
-    public void createRole(String tenantId, RoleCreateRequest req) {
+    public void createRole(RoleCreateRequest request) {
+        // 获取租户 ID
+        String tenantId = SecurityUtils.getTenantId();
+
         // 角色编码在同租户内唯一
         long count = roleMapper.selectCount(new LambdaQueryWrapper<SysRole>()
-                .eq(SysRole::getTenantId, tenantId)
-                .eq(SysRole::getCode, req.getCode()));
+            .eq(SysRole::getTenantId, tenantId)
+            .eq(SysRole::getCode, request.getCode()));
         if (count > 0) {
             throw new BusinessException(ResultCode.ALREADY_EXISTS, "角色编码已存在");
         }
-        // 组装角色实体
+
+        // 封装角色实体
         SysRole role = new SysRole();
         role.setTenantId(tenantId);
-        role.setName(req.getName());
-        role.setCode(req.getCode());
-        role.setDataScope(req.getDataScope());
-        role.setSort(req.getSort() != null ? req.getSort() : 100);
-        role.setRemark(req.getRemark());
+        role.setName(request.getName());
+        role.setCode(request.getCode());
+        role.setDataScope(request.getDataScope());
+        role.setSort(request.getSort() != null ? request.getSort() : 100);
+        role.setRemark(request.getRemark());
         role.setIsBuiltin(0);
-        // 持久化角色主表
+
+        // 保存角色
         roleMapper.insert(role);
-        // 同事务内建立角色-权限关联
-        saveRolePermissions(tenantId, role.getId(), req.getPermissionIds());
+
+        // 保存关联关系
+        saveRolePermissions(role.getId(), request.getPermissionIds());
     }
 
+    /**
+     * 编辑角色
+     *
+     * @param request 角色信息
+     */
     @Override
     @Transactional(rollbackFor = Exception.class)
-    public void updateRole(String tenantId, RoleUpdateRequest req) {
-        // 校验角色存在并加载当前快照（编码不可改，故不更新 code）
-        SysRole existing = loadRoleEntity(req.getId());
-        existing.setName(req.getName());
-        existing.setDataScope(req.getDataScope());
-        existing.setSort(req.getSort() != null ? req.getSort() : existing.getSort());
-        existing.setRemark(req.getRemark());
-        roleMapper.updateById(existing);
-        // 清除旧关联，重新建立
-        rolePermissionMapper.delete(new LambdaQueryWrapper<SysRolePermission>()
-                .eq(SysRolePermission::getRoleId, req.getId()));
-        saveRolePermissions(tenantId, req.getId(), req.getPermissionIds());
+    public void updateRole(RoleUpdateRequest request) {
+        // 加载可操作角色实体
+        SysRole role = loadOperableRoleEntity(request.getId());
+
+        // 更新字段
+        role.setName(request.getName());
+        role.setDataScope(request.getDataScope());
+        role.setSort(request.getSort() != null ? request.getSort() : role.getSort());
+        role.setRemark(request.getRemark());
+
+        // 更新角色
+        roleMapper.updateById(role);
+
+        // 删除旧的关联关系，并保存新的关联关系
+        deleteRolePermissions(request.getId());
+        saveRolePermissions(request.getId(), request.getPermissionIds());
     }
 
+    /**
+     * 删除角色
+     *
+     * @param id 角色 ID
+     */
     @Override
     @Transactional(rollbackFor = Exception.class)
     public void deleteRole(String id) {
-        // 加载待删角色并校验内置保护
-        SysRole role = loadRoleEntity(id);
-        if (role.getIsBuiltin() != null && role.getIsBuiltin() == 1) {
-            throw new BusinessException(ResultCode.FORBIDDEN, "系统内置角色不允许删除");
-        }
-        // 逻辑删除角色主表
-        roleMapper.deleteById(id);
-        // 同事务内清理角色-权限关联
-        rolePermissionMapper.delete(new LambdaQueryWrapper<SysRolePermission>()
-                .eq(SysRolePermission::getRoleId, id));
+        // 加载可操作角色实体
+        SysRole role = loadOperableRoleEntity(id);
+
+        // 删除角色
+        roleMapper.deleteById(role.getId());
+
+        // 删除关联关系
+        deleteRolePermissions(role.getId());
     }
 
+    /**
+     * 批量删除角色
+     *
+     * @param ids 角色 ID 列表
+     */
     @Override
     @Transactional(rollbackFor = Exception.class)
     public void batchDeleteRoles(List<String> ids) {
@@ -134,66 +180,103 @@ public class SysRoleServiceImpl implements SysRoleService {
         }
     }
 
+    /**
+     * 查询角色已分配的权限 ID 列表
+     *
+     * @param roleId 角色 ID
+     * @return 权限 ID 列表
+     */
     @Override
     public List<String> getRolePermissionIds(String roleId) {
         // 校验角色存在
         loadRoleEntity(roleId);
+
         // 查询角色已分配的权限 ID 列表
-        List<SysRolePermission> list = rolePermissionMapper.selectList(
-                new LambdaQueryWrapper<SysRolePermission>()
-                        .eq(SysRolePermission::getRoleId, roleId));
+        List<SysRolePermission> list = rolePermissionMapper.selectList(new LambdaQueryWrapper<SysRolePermission>()
+            .eq(SysRolePermission::getRoleId, roleId));
         if (CollectionUtils.isEmpty(list)) {
             return Collections.emptyList();
         }
-        return list.stream()
-                .map(SysRolePermission::getPermissionId)
-                .collect(Collectors.toList());
+        return list.stream().map(SysRolePermission::getPermissionId).toList();
     }
 
+    /**
+     * 为角色分配权限
+     *
+     * @param request 权限分配信息
+     */
     @Override
     @Transactional(rollbackFor = Exception.class)
-    public void assignPermissions(String tenantId, String roleId, List<String> permissionIds) {
-        // 校验角色存在
-        loadRoleEntity(roleId);
+    public void assignPermissions(RolePermissionAssignRequest request) {
+        // 加载可操作角色实体
+        loadOperableRoleEntity(request.getId());
+
         // 先清空该角色下原有权限关联（全量替换策略）
-        rolePermissionMapper.delete(new LambdaQueryWrapper<SysRolePermission>()
-                .eq(SysRolePermission::getTenantId, tenantId)
-                .eq(SysRolePermission::getRoleId, roleId));
-        // 非空则逐条插入新的角色-权限关联
-        saveRolePermissions(tenantId, roleId, permissionIds);
+        deleteRolePermissions(request.getId());
+
+        // 保存新的角色-权限关联
+        saveRolePermissions(request.getId(), request.getPermissionIds());
     }
 
     /**
-     * 批量插入角色-权限关联记录。
+     * 保存角色与权限的关联关系
      *
-     * @param tenantId      租户 ID
      * @param roleId        角色 ID
-     * @param permissionIds 权限 ID 列表，为空则不操作
+     * @param permissionIds 权限 ID 列表
      */
-    private void saveRolePermissions(String tenantId, String roleId, List<String> permissionIds) {
-        if (CollectionUtils.isEmpty(permissionIds)) {
-            return;
+    private void saveRolePermissions(String roleId, List<String> permissionIds) {
+        // 获取租户 ID
+        String tenantId = SecurityUtils.getTenantId();
+
+        // 保存角色与权限关联关系
+        if (!CollectionUtils.isEmpty(permissionIds)) {
+            permissionIds.forEach(permId -> {
+                SysRolePermission rp = new SysRolePermission();
+                rp.setTenantId(tenantId);
+                rp.setRoleId(roleId);
+                rp.setPermissionId(permId);
+                rolePermissionMapper.insert(rp);
+            });
         }
-        permissionIds.forEach(permId -> {
-            SysRolePermission rp = new SysRolePermission();
-            rp.setTenantId(tenantId);
-            rp.setRoleId(roleId);
-            rp.setPermissionId(permId);
-            rolePermissionMapper.insert(rp);
-        });
     }
 
     /**
-     * 按主键加载角色实体（供内部业务逻辑使用，不对外暴露 Entity）。
+     * 删除角色与权限的关联关系
+     *
+     * @param roleId 角色 ID
+     */
+    private void deleteRolePermissions(String roleId) {
+        rolePermissionMapper.delete(new LambdaQueryWrapper<SysRolePermission>()
+            .eq(SysRolePermission::getRoleId, roleId));
+    }
+
+    /**
+     * 根据 ID 加载角色实体
      *
      * @param id 角色 ID
      * @return 角色实体
-     * @throws BusinessException 角色不存在时抛出 NOT_FOUND
      */
     private SysRole loadRoleEntity(String id) {
         SysRole role = roleMapper.selectById(id);
         if (role == null) {
             throw new BusinessException(ResultCode.NOT_FOUND, "角色不存在");
+        }
+        if (!Objects.equals(role.getTenantId(), SecurityUtils.getTenantId())) {
+            throw new BusinessException(ResultCode.FORBIDDEN, "权限不足，无法操作其他租户的数据");
+        }
+        return role;
+    }
+
+    /**
+     * 根据 ID 加载可操作角色实体
+     *
+     * @param id 角色 ID
+     * @return 角色实体
+     */
+    private SysRole loadOperableRoleEntity(String id) {
+        SysRole role = loadRoleEntity(id);
+        if (role.getIsBuiltin() != null && role.getIsBuiltin() == 1) {
+            throw new BusinessException(ResultCode.FORBIDDEN, "系统内置角色不允许操作");
         }
         return role;
     }
